--- a/myapp/templates/auth/login.html
+++ b/myapp/templates/auth/login.html
@@ -4,9 +4,14 @@
 {% block content %} 
 <div class="col-md-6 offset-md-3">
     <h2 class="text-center mb-4">Login</h2>
+    <!-- Botão Google -->
+    <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-outline-dark w-100 mb-3 py-2">
+    <i class="fab fa-google me-2"></i>
+        Continuar com Google
+    </a>
     <form method="post">  
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
     <hr>
