feat: create products

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -61,6 +61,11 @@
                             {% if user.is_superuser %}
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
+                                    <a class="dropdown-item" href="/produto_list/">
+                                        <i class="fas fa-cog"></i> Produtos
+                                    </a>
+                                </li>
+                                 <li>
                                     <a class="dropdown-item" href="/admin/">
                                         <i class="fas fa-cog"></i> Admin
                                     </a>
